--- a/assets/scss/layouts/products/_productView.scss
+++ b/assets/scss/layouts/products/_productView.scss
@@ -87,23 +87,30 @@
 
 /* Custom Start */
 .custom-productView {
+    margin: 0;
     .productView-images {
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        padding-left: 0;
+        padding-right: 0;
 
         .productView-image {
             width: 100%;
             max-width: 674px;
-            margin-left: 16px;
+            margin-left: 20px;
+            margin-right: 8px;
         }
 
         .productView-thumbnails  {
             width: 100%;
-            max-width: 122px;
+            max-width: 124px;
+            margin-top: 0;
 
             .slick-arrow {
                 left: 50%;
+                width: 10px;
+                height: 17px;
 
                 &.slick-prev {
                     top: 0;
@@ -111,7 +118,7 @@
                 }
 
                 &.slick-next {
-                    top: 100%;
+                    top: calc(100% + 20px);
                     transform: translateX(-50%) rotate(90deg);
                 }
             }
@@ -121,18 +128,31 @@
                 margin: 0;
             }
 
+            span[data-carousel-tooltip] {
+                display: none;
+            }
+
             .productView-thumbnail {
+                padding: 0;
+                padding-top: 9px;
+                padding-bottom: 9px;
+
                 .productView-thumbnail-link {
                     max-width: 100%;
                     height: 122px;
                     padding: 0;
-                    border: 1px solid #707070;
                     
                     img {
                         width: 100%;
                         object-fit: cover;
+                        border: 1px solid #959595;
+                    }
+
+                    &:hover {
+                        border-color: #959595;
                     }
                 }
+
             }
         }
 
@@ -140,7 +160,7 @@
             max-width: 674px;
             margin: 0;
 
-            border: 1px solid #707070;
+            border: 1px solid #959595;
             &::after {
                 padding-bottom: 100%;
             }
@@ -149,14 +169,234 @@
 
     .productView-details {
         &.product-data {
-            .productView-title {
-                margin: 0;
-            }
+            padding-bottom: 0;
+        }
+
+        .productView-product {
+            padding-bottom: 0;
+            border-bottom: none;
+        }
+        
+        &.product-options {
+            padding-top: 10px;
+            padding-bottom: 0;
 
             .productView-options {
+                margin-bottom: 10px;
+            }
+
+            div[data-product-option-change] {
+                .form-field {
+                    margin-bottom: 0;
+                }
                 .form-label {
                     text-transform: uppercase;
+                    font-size: 12px;
+                    letter-spacing: 0.84px;
+                    line-height: 1.5rem;
+                    color: #232323;
+                    font-weight: normal;
                 }
+
+                .form-option-wrapper {
+                    .form-option {
+                        background-color: #efefef;
+                        padding: 8px 16px;
+                        border: none;
+                        border-radius: 12px;
+                        margin-right: 11px;
+
+                        .form-option-variant {
+                            font-size: 15px;
+                            line-height: 23px;
+                            letter-spacing: 0;
+                            font-weight: normal;
+                            color: #232323;
+                        }
+                    }
+
+                    .form-radio:checked + .form-option {
+                        border: none;
+                        box-shadow: none;
+
+                        .form-option-variant {
+                            color: #ff5100;
+                        }
+                    }
+                }
+            }
+
+            .productView-price {
+                font-size: 12px;
+                margin-top: 16px;
+
+                .price-section {
+                    line-height: 100%;
+                    height: fit-content;
+
+                    + .price-section {
+                        margin-top: 4px;
+                    }
+                }
+                .price {
+                    color: #232323;
+                    font-size: 12px;
+                    line-height: 1.5rem;
+                    letter-spacing: 0.84px;
+                    font-weight: normal;
+
+                    &.price--withTax {
+                        font-size: 18px;
+                        letter-spacing: 1.26px;
+                        line-height: 100%;
+                        font-weight: 600;
+                    }
+
+                    &.price--non-sale {
+                        text-decoration: none;
+                    }
+                }
+            }
+
+            .productView-info {
+                .productView-info-item {
+                    margin-top: 5px;
+
+                    .productView-info-name {
+                        margin-bottom: 0;
+                        font-size: 12px;
+                        line-height: 1.5rem;
+                        letter-spacing: 0.84px;
+                        font-weight: normal;   
+                    }
+    
+                    .productView-info-value {
+                        margin-bottom: 0;
+                        text-transform: uppercase;
+                        color: #ff5100;
+                        font-size: 12px;
+                        line-height: 1.5rem;
+                        letter-spacing: 0.84px;
+                        font-weight: normal;
+                    }
+                }
+
+            }
+
+        }
+    }
+    .add-to-cart-wrapper {
+        .form-field--increments {
+            margin-bottom: 16px;
+            .form-label {
+                display: none;
+            }
+
+            .form-increment {
+                .button {
+                    border-radius: 50% !important;
+                    padding: 0;
+                    background-color: #E3E5E8;
+                    border-color: #E3E5E8;
+
+                    .icon {
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+
+                .form-input--incrementTotal {
+                    font-family: 'Neusa Next Pro';
+                    font-size: 15px;
+                    line-height: 22px;
+                    font-weight: 400;
+                    color: #727C8E;
+                    width: 36px;
+                }
+            }
+        }
+
+    }
+    .add-to-cart-buttons {
+        padding: 0;
+        margin: 0;
+        width: fit-content;
+        margin-right: 15px;
+
+        .btn {
+            border: none;
+        }
+    }
+
+    .productView-button-group {
+        .custom-add-to-quote {
+
+        }
+
+        .form-wishlist {
+            margin: 0;
+            margin-left: 14px;
+        }
+
+        .icon {
+            margin-left: 4px;
+            float: unset;
+        }
+    }
+}
+
+/* Custom Tabs */
+.custom-product-tabs {
+    .custom-tab-content {
+        .custom-toggle-title {
+            border-top: 1px solid #F2F2F2;
+
+            .custom-toggleLink {
+                padding-top: 12px;
+                padding-bottom: 11px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                .text {
+
+                }
+
+                .icon-plus {
+                    position: relative;
+                    width: 16px;
+                    height: 2px;
+                    background-color: #000000;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        width: 2px;
+                        height: 16px;
+                        background-color: #000000;
+                        transform: rotate(90deg);
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                    }
+                }
+
+            }
+
+        }
+        .custom-toggle-content {
+            display: none;
+        }
+
+        &.is-open {
+            .icon-plus {
+                &::after {
+                    display: none;
+                }
+            }
+
+            .custom-toggle-content {
+                display: block;
             }
         }
     }
