Start Ask An Expert

--- a/templates/components/custom/product/product-detail-tabs.html
+++ b/templates/components/custom/product/product-detail-tabs.html
@@ -1,7 +1,7 @@
 <div class="custom-product-tabs">
     <div class="custom-tab-content" id="tab-shipping">
         <div class="custom-toggle-title">
-            <a class="custom-toggleLink" data-collapsible="" href="#tab-shipping" aria-label="Shipping + Returns" aria-controls="tab-shipping">
+            <a class="custom-toggleLink" href="#tab-shipping">
                 <span class="text">Calculate Shipping Price</span>
                 <span class="icon-plus"></span>
             </a>
@@ -14,7 +14,7 @@
 
     <div class="custom-tab-content" id="tab-review">
         <div class="custom-toggle-title">
-            <a class="custom-toggleLink" data-collapsible="" href="#tab-review" aria-label="Shipping + Returns" aria-controls="tab-review">
+            <a class="custom-toggleLink" href="#tab-review">
                 <span class="text">Reviews</span>
                 <span class="icon-plus"></span>
             </a>
@@ -27,7 +27,7 @@
 
     <div class="custom-tab-content" id="tab-description">
         <div class="custom-toggle-title">
-            <a class="custom-toggleLink" data-collapsible="" href="#tab-description" aria-label="Shipping + Returns" aria-controls="tab-description">
+            <a class="custom-toggleLink" href="#tab-description">
                 <span class="text">Descriptions</span>
                 <span class="icon-plus"></span>
             </a>
@@ -40,7 +40,7 @@
 
     <div class="custom-tab-content" id="tab-technical">
         <div class="custom-toggle-title">
-            <a class="custom-toggleLink" data-collapsible="" href="#tab-technical" aria-label="Shipping + Returns" aria-controls="tab-technical">
+            <a class="custom-toggleLink" href="#tab-technical">
                 <span class="text">Technical Information</span>
                 <span class="icon-plus"></span>
             </a>
