--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -313,6 +313,10 @@
 
         <!-- Product Detail Tabs -->
         {{> components/custom/product/product-detail-tabs desc=product.description}}
+
+        <!-- Custom Ask An Expert -->
+        {{> components/custom/product/ask-an-expert}}
+
     </section>
 </div>
 
