--- a/templates/components/custom/product/ask-an-expert.html
+++ b/templates/components/custom/product/ask-an-expert.html
@@ -1,3 +1,6 @@
 <div class="productView-askAnExpert{{#if product.options}} productView-askAnExpertOption{{/if}}">
+    <div class="ask-an-expert-icon">
+        <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/ask-expert.png" alt="Ask An Exert Icon">
+    </div>
     Have Questions? <a class="productView-askAnExpert-link ask-an-expert-link" href="#" aria-label="Ask an Expert">Ask an Expert</a>
 </div>
