--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -317,6 +317,9 @@
         <!-- Custom Ask An Expert -->
         {{> components/custom/product/ask-an-expert}}
 
+        <!-- Custom Technical Sheet -->
+        {{> components/custom/product/technical-sheet}}
+
     </section>
 </div>
 
